--- a/manifest.json
+++ b/manifest.json
@@ -10,4 +10,9 @@
     "background": {
         "service worker": "background.js"
     },
+    "action": {
+        "default_icon": {
+            "32": "insertMICHAELSICON.png",
+        }
+    }
 }
