--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 { 
     "name": "Googely Boogely Healthy Study Buddy",
     "version": "1.0.0",
-    "descripton": "This is an extension to help remind users to take mental health breaks and other healthy stuff",
+    "description": "This is an extension to help remind users to take mental health breaks and other healthy stuff",
     "manifest_version": 3,
-    "authors": "Parathova, Wuzy, MicrophoneAle, Jaden Zhang",
+    "author": "Parathova, Wuzy, MicrophoneAle, Jaden Zhang",
 
-    "background": {
+    /*"background": {
         "service worker": "background.js"
-    },
+    },*/
 
     "icons":{
         "32": "ExtensionIcon.png"
@@ -17,7 +17,7 @@
         "default_icon" : "ExtensionIcon.png",
         "default_popup": "popup.html",
         "default_title": "le_app"
-    },
+    }
     
-    "permissions": ["activeTab"]
+    /*"permissions": ["activeTab"]*/
 }
