--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     "action": {
         "default_icon" : "ExtensionIcon.png",
         "default_popup": "popup.html",
+        "web_accessible_resources": ["uwuduck.png"],
         "default_title": "le_app"
     }
     
